# notestack

./: .gitignore  notestack.py  pyproject.toml  setup.py
notestack/: __init__.py  main.py
